feat: registration logic

--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.32.1",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/themes": "^3.2.1",
     "@solana/wallet-adapter-base": "^0.9.27",
@@ -34,10 +35,12 @@
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "vite": "^7.1.6",
+    "vite-plugin-node-polyfills": "^0.25.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
+    "@types/node": "^25.0.10",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "eslint": "^9.35.0",
